--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>login</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>
+        <!-- 引入封装了failback的接口--initGeetest -->
+    <script src="http://static.geetest.com/static/tools/gt.js"></script>
     <style>
         html{height: 100%}
         body{margin: 0;height: 100%;
@@ -40,7 +43,7 @@
                 <div class="form-group form-group-lg">
                     <label for="username" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" id="username" name="username" placeholder="用户名">
+                        <input type="text" class="form-control" id="username1" name="username" placeholder="用户名">
                     </div>
 
                 </div>
@@ -48,27 +51,20 @@
                     <label for="password" class="col-sm-2 control-label">密码</label>
                     <span class="error_info"></span>
                     <div class="col-sm-5">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="密码">
-                    </div>
-                </div>
+                        <input type="password" class="form-control" id="password1" name="password" placeholder="密码">
 
-                <div class="form-group form-group-lg">
-                    <label for="validCode" class="col-sm-2 control-label">验证码</label>
-                    <span class="error_info"></span>
-                    <div class="col-md-2">
-                        <input type="validCode" class="form-control" id="validCode" name="validCode" placeholder="验证码">
-                    </div>
-                    <div class="col-sm-2">
-                        <img src="/check_code/" alt="" style="width: 120px;height: 30px">
                     </div>
                 </div>
 
                 <div class="col-md-offset-2 col-md-6 button_type">
-                    <button type="button" class="btn btn-lg btn-success">登陆</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button type="button" class="btn btn-lg btn-success" id="popup-submit">登陆</button>
+{#                    <input class="btn" id="popup-submit" type="submit" value="提交">#}
+
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="/regist/">
                         <button type="button" class="btn btn-lg btn-primary">注册</button>
                     </a>
+                    <div id="popup-captcha"></div>
                 </div>
             </form>
 </div>
@@ -80,37 +76,65 @@
 <script type="application/javascript" src="/static/jquery-3.2.1.min.js"></script>
 <script src="/static/jquery.cookie.js"></script>
 <script type="application/javascript" src="/static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+
 <script>
     function foo() {
         $(".error_info").html("")
     }
+    var handlerPopup = function (captchaObj) {
+        // 成功的回调
+        captchaObj.onSuccess(function () {
+            var validate = captchaObj.getValidate();
+            $.ajax({
+{#                url: "/pc-geetest/ajax_validate", // 进行二次验证#}
+                url:"/login/",
+                type: "post",
+                headers: {"X-CSRFToken": $.cookie('csrftoken')},
+                dataType: "json",
+                data: {
+                    username: $('#username1').val(),
+                    password: $('#password1').val(),
+                    geetest_challenge: validate.geetest_challenge,
+                    geetest_validate: validate.geetest_validate,
+                    geetest_seccode: validate.geetest_seccode
+                },
+                success: function (data) {
+                    if (data) {
+                        location.href = '/index/'
 
-    $(".btn").click(function () {
-        $.ajax({
-            url: "/login/",
-            type: "POST",
-            headers: {"X-CSRFToken": $.cookie('csrftoken')},
-            data: {
-                {#               csrfmiddlewaretoken:$("[name='csrfmiddlewaretoken']").val(),#}
-                username: $("#username").val(),
-                password: $("#password").val(),
+                    } else {
+                        $(".error_info").html("用户名或者密码错误")
+                        setTimeout(foo, 3000)
 
-            },    // 请求数据 ，是js数据    ?name=yuan&pwd=123
-
-            success: function (data) {
-                var data = JSON.parse(data);
-                if (!data) {
-                    $(".error_info").html("用户名或者密码错误")
-                    setTimeout(foo, 3000)
+                    }
                 }
-                else {
-                    location.href = '/index/'
-                }
-
-            }
-        })
-    })
-
+            });
+        });
+        $("#popup-submit").click(function () {
+            captchaObj.show();
+        });
+        // 将验证码加到id为captcha的元素里
+        captchaObj.appendTo("#popup-captcha");
+        // 更多接口参考：http://www.geetest.com/install/sections/idx-client-sdk.html
+    };
+    // 验证开始需要向网站主后台获取id，challenge，success（是否启用failback）
+    $.ajax({
+        url: "/pc-geetest/register?t=" + (new Date()).getTime(), // 加随机数防止缓存
+        type: "get",
+        dataType: "json",
+        success: function (data) {
+            // 使用initGeetest接口
+            // 参数1：配置参数
+            // 参数2：回调，回调的第一个参数验证码对象，之后可以使用它做appendTo之类的事件
+            initGeetest({
+                gt: data.gt,
+                challenge: data.challenge,
+                product: "popup", // 产品形式，包括：float，embed，popup。注意只对PC版验证码有效
+                offline: !data.success // 表示用户后台检测极验服务器是否宕机，一般不需要关注
+                // 更多配置参数请参见：http://www.geetest.com/install/sections/idx-client-sdk.html#config
+            }, handlerPopup);
+        }
+    });
 </script>
 </body>
 </html>
