--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>login</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>
+    <script src="/static/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
         <!-- 引入封装了failback的接口--initGeetest -->
     <script src="http://static.geetest.com/static/tools/gt.js"></script>
     <style>
