--- a/templates/regist.html
+++ b/templates/regist.html
@@ -56,6 +56,8 @@
     </div>
 </div>
 
+<img src="/media/up" alt="">
+
 <script>
     // 头像预览
 
@@ -77,7 +79,7 @@
         formdata.append("password",$("#id_password").val());
         formdata.append("repeat_pwd",$("#id_repeat_pwd").val());
         formdata.append("email",$("#id_email").val());
-        formdata.append("avatar_img",$("#avatar_file")[0].files[0]); #拿到最近传的头像
+        formdata.append("avatar_img",$("#avatar_file")[0].files[0]);    #拿到最近传的头像
 
         $.ajax({
             url:"/reg/",
