--- a/templates/login.html
+++ b/templates/login.html
@@ -39,6 +39,11 @@
         .button_type {
             margin-top: 20px;
         }
+        .error_info{
+            display: inline-block;
+            margin-top: 10px;
+
+        }
 
     </style>
 </head>
