--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand">代码改变世界</a>
+        <a href="/index/" class="navbar-brand">代码改变世界</a>
     </div>
     <ul class="nav navbar-nav navbar-right" style="margin-right:25px;">
-        <li><a href="">登陆</a></li>
-        <li><a href="">注销</a></li>
+      {% if request.user.is_authenticated %}
+            <li><a href=""><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{ request.user.username }}</a></li>
+            <li><a href="">注销</a></li>
+         {% else %}
+            <li><a href="/login/">登录</a></li>
+            <li><a href="">注册</a></li>
+        {% endif %}
+
+
     </ul>
 </nav>
 
