--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>首页</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-
+    <style>
+        .pub_info{
+            margin-left: 50px;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -54,7 +58,13 @@
                         <h4 class="media-heading"><a href="">{{ artical.title }}</a></h4>
                          {{ artical.desc }}
                 </div>
+                <div class="pub_info row">
+                    <a href="/blog/{{ artical.user.username }}">{{ artical.user.username }}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;
+                    <a href=""><span class="glyphicon glyphicon-comment"></span>评论({{artical.comment_count }})&nbsp;&nbsp;</a>
+                    <a href=""><span class="glyphicon glyphicon-thumbs-up"></span>点赞({{ artical.up_count }})</a>
+                </div>
             </div>
+
         {% endfor %}
 
         </div>
