--- a/templates/homeSite.html
+++ b/templates/homeSite.html
@@ -18,7 +18,16 @@
 <div class="header">
     <h4>{{ username }}</h4>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="archive col-md -3" >
 
+        </div>
+        <div class="artical_list col-md-8">
+
+        </div>
+    </div>
+</div>
 <div>
 
 </div>
