--- a/templates/homeSite.html
+++ b/templates/homeSite.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
-    <style>
+    <title>{{ username }}</title>
+    <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script src="/static/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>    <style>
         .header{
             width: 100%;
             height: 44px;
@@ -20,11 +21,13 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="archive col-md -3" >
+        <div class="archive col-md-3" >
 
         </div>
         <div class="artical_list col-md-8">
-
+            {% for artical in artical_list %}
+               <p>{{ artical.title }}</p>
+            {% endfor %}
         </div>
     </div>
 </div>
