--- a/templates/index.html
+++ b/templates/index.html
@@ -52,12 +52,13 @@
                         <img class="media-object" src="{{ artical.user.avatar.url }}" alt="">
                     </a>
                 </div>
+{#            {% endfor %}#}
                 <div class="media-body">
                         <h4 class="media-heading"><a href="">{{ artical.title }}</a></h4>
                          {{ artical.desc }}
                 </div>
                 <div class="pub_info row">
-                    <a href="/blog/{{ artical.user.username }}">{{ artical.user.user }}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;
+                    <a href="/blog/{{ artical.user.username }}">{{ artical.user.username}}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;
                     <a href=""><span class="glyphicon glyphicon-comment"></span>评论({{artical.comment_count }})&nbsp;&nbsp;</a>
                     <a href=""><span class="glyphicon glyphicon-thumbs-up"></span>点赞({{ artical.up_count }})</a>
                 </div>
