--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,17 @@
     <title>首页</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <style>
-        .pub_info{
+        .pub_info {
             margin-left: 50px;
         }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-static-top">
-{#    上菜单栏#}
+<nav class="navbar navbar-default navbar-static-top">
+    {#    上菜单栏#}
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -23,10 +24,11 @@
         <a href="/index/" class="navbar-brand">代码改变世界</a>
     </div>
     <ul class="nav navbar-nav navbar-right" style="margin-right:25px;">
-      {% if request.user.is_authenticated %}
-            <li><a href=""><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{ request.user.username }}</a></li>
+        {% if request.user.is_authenticated %}
+            <li><a href=""><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{ request.user.username }}</a>
+            </li>
             <li><a href="/logout">注销</a></li>
-         {% else %}
+        {% else %}
             <li><a href="/login/">登录</a></li>
             <li><a href="/regist/">注册</a></li>
         {% endif %}
@@ -36,39 +38,41 @@
 <div class="container">
     <div class="row">
         <div class="col-md-2">
-{#            左侧菜单#}
+            {#            左侧菜单#}
             <div class="panel panel-default">
                 <div class="panel-body">
                     网站分类
                 </div>
                 <div class="panel-footer">Panel footer</div>
-            </div>        </div>
-        <div class="col-md-7">
-{#            内容#}
-        {% for artical in artical_list %}
-            <div class="media">
-                <div class="media-left media-middle">
-                    <a href="#">
-                        <img class="media-object" src="{{ artical.user.avatar.url }}" alt="">
-                    </a>
-                </div>
-{#            {% endfor %}#}
-                <div class="media-body">
-                        <h4 class="media-heading"><a href="">{{ artical.title }}</a></h4>
-                         {{ artical.desc }}
-                </div>
-                <div class="pub_info row">
-                    <a href="/blog/{{ artical.user.username }}">{{ artical.user.username}}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;
-                    <a href=""><span class="glyphicon glyphicon-comment"></span>评论({{artical.comment_count }})&nbsp;&nbsp;</a>
-                    <a href=""><span class="glyphicon glyphicon-thumbs-up"></span>点赞({{ artical.up_count }})</a>
-                </div>
             </div>
+        </div>
+        <div class="col-md-7">
+            {#            内容#}
+            {% for artical in artical_list %}
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object" src="{{ artical.user.avatar.url }}" alt="">
+                        </a>
+                    </div>
+                    {#            {% endfor %}#}
+                    <div class="media-body">
+                        <h4 class="media-heading"><a href="">{{ artical.title }}</a></h4>
+                        {{ artical.desc }}
+                    </div>
+                    <div class="pub_info row">
+                        {#                    <a href="/blog/{{ artical.user.username }}">{{ artical.user.username}}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;#}
+                        <a href="{% url 'home' username=artical.user.username %}">{{ artical.user.username }}</a>&nbsp;&nbsp;发布于&nbsp;&nbsp;{{ artical.create_time|date:"Y-m-d H:i" }}&nbsp;&nbsp;
+                        <a href=""><span class="glyphicon glyphicon-comment"></span>评论({{ artical.comment_count }})&nbsp;&nbsp;</a>
+                        <a href=""><span class="glyphicon glyphicon-thumbs-up"></span>点赞({{ artical.up_count }})</a>
+                    </div>
+                </div>
 
-        {% endfor %}
+            {% endfor %}
 
         </div>
         <div class="col-md-3">
-{#            右侧面板#}
+            {#            右侧面板#}
             <div class="panel panel-info">
                 <div class="panel-body">
                     Panel content
