--- a/templates/regist.html
+++ b/templates/regist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>Regist</title>
 
     <script src="/static/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/static/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
