--- a/templates/homeSite.html
+++ b/templates/homeSite.html
@@ -6,34 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ username }}</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/homeSite.css">
+    <link rel="stylesheet" href="/static/css/article_detail.css">
     <script src="/static/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
-    <style>
-        .header {
-            width: 100%;
-            height: 44px;
-            background-color: #336699;
-        }
-
-        .artical_list {
-            margin-top: 10px;
-            margin-left: 40px;
-        }
-
-        .info {
-            font-size: 10px;
-            color: gainsboro;
-        }
-
-        .archive {
-            margin-top: 50px;
-        }
-        .username{
-            color: #000;
-            font-size: 30px;
-            font-weight: normal;
-            margin: 5px 0 0 100px;
-        }
-    </style>
 </head>
 <body>
 
@@ -55,11 +30,12 @@
                 <div class="panel-heading">分类归档</div>
                 <div class="panel-body">
                     {% for category in category_list %}
-                        <a href="/blog/{{ current_user.username }}/category/{{ category.0 }}"><p>{{ category.0 }}({{ category.1 }})</p></a>
+                        <a href="/blog/{{ current_user.username }}/category/{{ category.0 }}">
+                            <p>{{ category.0 }}({{ category.1 }})</p></a>
                     {% endfor %}
-{#                    {% for category in current_user.blog.category_set.all%}#}
-{#                        <p>{{ category }}({{ category.article_set.count }})</p>#}
-{#                    {% endfor %}#}
+                    {#                    {% for category in current_user.blog.category_set.all%}#}
+                    {#                        <p>{{ category }}({{ category.article_set.count }})</p>#}
+                    {#                    {% endfor %}#}
                 </div>
             </div>
             <div class="panel panel-info">
@@ -74,25 +50,31 @@
                 <div class="panel-heading">日期归档</div>
                 <div class="panel-body">
                     {% for date in date_list %}
-                        <p><a href="/blog/{{ current_user.username }}/date/{{ date.0 }}">{{ date.0 }}({{ date.1 }})</a></p>
+                        <p><a href="/blog/{{ current_user.username }}/date/{{ date.0 }}">{{ date.0 }}({{ date.1 }})</a>
+                        </p>
                     {% endfor %}
                 </div>
             </div>
 
         </div>
         <div class="artical_list col-md-8">
-            {% for artical in artical_list %}
-                <div class="row">
-                    <div class="artical_title"><a href=""><h3>{{ artical.title }}</h3></a></div>
-                    <div class="artical_desc">{{ artical.desc }}</div>
-                    <div class="info pull-right">
-                        发表于 <span>{{ artical.create_time|date:"Y-m-d" }}</span>&nbsp;&nbsp;
-                        <span>评论({{ artical.comment_count }})</span>&nbsp;&nbsp;
-                        <span>点赞({{ artical.up_count }})</span>&nbsp;&nbsp;
-                        <span>阅读({{ artical.read_count }})</span>
+            {#        文章简介#}
+            {% block content %}
+                {% for artical in artical_list %}
+                    <div class="row">
+                        <div class="artical_title"><a
+                                href="/blog/{{ current_user.username }}/articles/{{ artical.nid }}">
+                            <h3>{{ artical.title }}</h3></a></div>
+                        <div class="artical_desc">{{ artical.desc }}</div>
+                        <div class="info pull-right">
+                            发表于 <span>{{ artical.create_time|date:"Y-m-d" }}</span>&nbsp;&nbsp;
+                            <span>评论({{ artical.comment_count }})</span>&nbsp;&nbsp;
+                            <span>点赞({{ artical.up_count }})</span>&nbsp;&nbsp;
+                            <span>阅读({{ artical.read_count }})</span>
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% endblock %}
         </div>
     </div>
 </div>
