--- a/static/css/article_detail.css
+++ b/static/css/article_detail.css
@@ -1,3 +1,10 @@
+
+
+.article_region .article_con{
+    margin-left: 20px;
+}
+
+
 .updown .diggit{
     width: 46px;
     height: 52px;
@@ -6,4 +13,25 @@
     cursor: pointer;
     margin-top: 2px;
     padding-top: 5px;
+}
+
+.updown .buryit{
+    margin-left: 20px;
+    width: 46px;
+    height: 52px;
+    background: url(http://static.cnblogs.com/images/downdown.gif) no-repeat;
+    text-align: center;
+    cursor: pointer;
+    margin-top: 2px;
+    padding-top: 5px;
+}
+
+.subComment_region #tbCommentAuthor{
+        background-position: 3px -3px;
+        background-image: url(http://static.cnblogs.com/images/icon_form.gif);
+        background-repeat: no-repeat;
+        border: 1px solid #ccc;
+        padding: 4px 4px 4px 30px;
+        width: 300px;
+        font-size: 13px;
 }
