--- a/templates/articleDetail.html
+++ b/templates/articleDetail.html
@@ -17,4 +17,24 @@
             <span class="diggnum" id="digg_count">{{ article_obj.up_count }}</span>
         </div>
      </div>
+
+    <div class="had_comment_region">
+         <h5>已发表评论：</h5>
+    </div>
+    <div class="subComment_region">
+         <h5>发表评论：</h5>
+         <p><input type="text" id="tbCommentAuthor" class="author" disabled="disabled" size="50" value="{{ request.user.username }}"></p>
+         <p>评论内容：</p>
+
+          <form action="">
+              {% csrf_token %}
+             <p> <textarea name="" id="" cols="60" rows="10"></textarea></p>
+             <input type="button" value="提交评论" class="btn btn-default">
+          </form>
+
+    </div>
+
+
+
+
 {% endblock %}
