--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,9 @@
                 <div class="panel-body">
                     网站分类
                 </div>
-                <div class="panel-footer">Panel footer</div>
+                <div class="panel-footer">
+                    {{  }}
+                </div>
             </div>
         </div>
         <div class="col-md-7">
