--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
         .pub_info {
             margin-left: 50px;
         }
+        .hides{
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -50,7 +53,7 @@
                             <div class="panel-body">
                                 <p>{{ cate.name }}</p>
                             </div>
-                            <div class="panel-footer">
+                            <div class="panel-footer hides">
                                 {% for cate in cate.sitearticlecategory_set.all %}
                                     <p>{{ cate.name }}</p>
                                 {% endfor %}
