--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                             </div>
                             <div class="panel-footer hides">
                                 {% for cate in cate.sitearticlecategory_set.all %}
-                                    <p>{{ cate.name }}</p>
+                                    <p><a href="/cate/{{ cate.name }}">{{ cate.name }}</a></p>
                                 {% endfor %}
                                 
                             </div>
